--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
   </properties>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.fusesource.jansi/jansi -->
+    <dependency>
+      <groupId>org.fusesource.jansi</groupId>
+      <artifactId>jansi</artifactId>
+      <version>1.17.1</version>
+    </dependency>
 
     <!-- JUnit provides unit testing for Java applications -->
     <dependency>
