--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
         <configuration>
           <archive>
             <manifest>
-              <mainClass>it.polimi.se2018.App</mainClass>
+              <mainClass>it.polimi.se2018.network.server.SagradaServer</mainClass>
             </manifest>
           </archive>
         </configuration>
